// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`horizontal > should render 0 children 1`] = `
"<div style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 0px; height: 100%;"></div>
</div>"
`;

exports[`horizontal > should render 1 children 1`] = `
"<div style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100px; height: 100%;">
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;">
      <div>0</div>
    </div>
  </div>
</div>"
`;

exports[`horizontal > should render 5 children 1`] = `
"<div style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 500px; height: 100%;">
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; visibility: visible; display: inline-flex;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; visibility: visible; display: inline-flex;">
      <div>3</div>
    </div>
  </div>
</div>"
`;

exports[`horizontal > should render 100 children 1`] = `
"<div style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 10000px; height: 100%;">
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; visibility: visible; display: inline-flex;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; visibility: visible; display: inline-flex;">
      <div>3</div>
    </div>
  </div>
</div>"
`;

exports[`horizontal > should render 10000 children 1`] = `
"<div style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 1000000px; height: 100%;">
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; visibility: visible; display: inline-flex;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; visibility: visible; display: inline-flex;">
      <div>3</div>
    </div>
  </div>
</div>"
`;

exports[`horizontal > should render component 1`] = `
"<div style="display: inline-block; overflow-x: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 300px; height: 100%;">
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; visibility: visible; display: inline-flex;">
      <div>2</div>
    </div>
  </div>
</div>"
`;

exports[`horizontal > should render with given width / height 1`] = `
"<div style="display: inline-block; overflow-x: auto; contain: strict; width: 100px; height: 800px;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 500px; height: 100%;">
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; visibility: visible; display: inline-flex;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; visibility: visible; display: inline-flex;">
      <div>3</div>
    </div>
  </div>
</div>"
`;

exports[`should pass attributes to element 1`] = `
"<div style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%; background: red;" id="id" class="class" tab-index="0" role="list" aria-label="test">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 50px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;">
      <div>0</div>
    </div>
  </div>
</div>"
`;

exports[`should render with keepMounted 1`] = `
"<div style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 5000px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;">
      <div>3</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;">
      <div>4</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px; visibility: visible;">
      <div>5</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px; visibility: visible;">
      <div>6</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px; visibility: visible;">
      <div>7</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px; visibility: visible;">
      <div>8</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px; visibility: visible;">
      <div>9</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px; visibility: visible;">
      <div>10</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px; visibility: visible;">
      <div>11</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px; visibility: visible;">
      <div>12</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px; visibility: visible;">
      <div>13</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px; visibility: visible;">
      <div>14</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 1000px; visibility: visible;">
      <div>20</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 1500px; visibility: visible;">
      <div>30</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 2000px; visibility: visible;">
      <div>40</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 2500px; visibility: visible;">
      <div>50</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 3000px; visibility: visible;">
      <div>60</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 3500px; visibility: visible;">
      <div>70</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 4000px; visibility: visible;">
      <div>80</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 4500px; visibility: visible;">
      <div>90</div>
    </div>
  </div>
</div>"
`;

exports[`vertical > should render 0 children 1`] = `
"<div style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 0px;"></div>
</div>"
`;

exports[`vertical > should render 1 children 1`] = `
"<div style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 50px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;">
      <div>0</div>
    </div>
  </div>
</div>"
`;

exports[`vertical > should render 5 children 1`] = `
"<div style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 250px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;">
      <div>3</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;">
      <div>4</div>
    </div>
  </div>
</div>"
`;

exports[`vertical > should render 100 children 1`] = `
"<div style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 5000px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;">
      <div>3</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;">
      <div>4</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px; visibility: visible;">
      <div>5</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px; visibility: visible;">
      <div>6</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px; visibility: visible;">
      <div>7</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px; visibility: visible;">
      <div>8</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px; visibility: visible;">
      <div>9</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px; visibility: visible;">
      <div>10</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px; visibility: visible;">
      <div>11</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px; visibility: visible;">
      <div>12</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px; visibility: visible;">
      <div>13</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px; visibility: visible;">
      <div>14</div>
    </div>
  </div>
</div>"
`;

exports[`vertical > should render 10000 children 1`] = `
"<div style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 500000px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;">
      <div>3</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;">
      <div>4</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px; visibility: visible;">
      <div>5</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px; visibility: visible;">
      <div>6</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px; visibility: visible;">
      <div>7</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px; visibility: visible;">
      <div>8</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px; visibility: visible;">
      <div>9</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px; visibility: visible;">
      <div>10</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px; visibility: visible;">
      <div>11</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px; visibility: visible;">
      <div>12</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px; visibility: visible;">
      <div>13</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px; visibility: visible;">
      <div>14</div>
    </div>
  </div>
</div>"
`;

exports[`vertical > should render component 1`] = `
"<div style="display: block; overflow-y: auto; contain: strict; width: 100%; height: 100%;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 150px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;">
      <div>2</div>
    </div>
  </div>
</div>"
`;

exports[`vertical > should render with given width / height 1`] = `
"<div style="display: block; overflow-y: auto; contain: strict; width: 100px; height: 800px;">
  <div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 250px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;">
      <div>3</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;">
      <div>4</div>
    </div>
  </div>
</div>"
`;
